# python-surya-ocr

./: Makefile  README.md  pyproject.toml
src/: app.py  download.py
